fix spacing view blog

--- a/Web/src/AdminNew/pages/Blogs/landing/ViewBlog.scss
+++ b/Web/src/AdminNew/pages/Blogs/landing/ViewBlog.scss
@@ -35,6 +35,7 @@
 
   .blog-html {
     border-bottom: 1px solid #eee;
+    margin-top: 1rem;
     .blog-title {
       font-size: 1.5rem;
     }
@@ -53,7 +54,7 @@
     }
     .blog-thumbnail-container {
       width: 100%;
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
       img {
       }
     }
